# TLTSS

./: Cargo.toml
crates/hermes-agent/: Cargo.toml
crates/hermes-agent/src/: agent.rs  compressor.rs  context_files.rs  delegate_tool.rs  delegation.rs  lib.rs  memory.rs  memory_manager.rs  prompt.rs  retry.rs  routing.rs  session.rs  session_search.rs  trace.rs
crates/hermes-cfg/: Cargo.toml
crates/hermes-cfg/src/: error.rs  lib.rs  message.rs  platform.rs  tool.rs  traits.rs
crates/hermes-cli/: Cargo.toml
crates/hermes-cli/src/: main.rs
crates/hermes-cli/tests/: e2e_agent.rs
crates/hermes-core/: Cargo.toml
crates/hermes-core/src/: config.rs  env.rs  lib.rs  permission.rs  provider.rs  sse.rs
crates/hermes-cron/: Cargo.toml
crates/hermes-cron/.hermes/cron/: jobs.json
crates/hermes-cron/src/: job.rs  lib.rs  scheduler.rs
crates/hermes-gateway/: Cargo.toml
crates/hermes-gateway/src/: adapter.rs  api.rs  auth.rs  channel.rs  discord.rs  lib.rs  runner.rs  slack.rs  telegram.rs
crates/hermes-llm/: Cargo.toml
crates/hermes-llm/src/: anthropic.rs  fake.rs  fallback.rs  lib.rs  openai.rs  routing.rs
crates/hermes-llm/tests/: integration_anthropic.rs
crates/hermes-mcp/: Cargo.toml
crates/hermes-mcp/src/: adapter.rs  client.rs  jsonrpc.rs  lib.rs  transport.rs
crates/hermes-mcp/tests/fixtures/: mock_mcp_server.py
crates/hermes-security/: Cargo.toml
crates/hermes-security/src/: env_filter.rs  file_guard.rs  lib.rs  path.rs  prompt.rs
crates/hermes-skill/: Cargo.toml
crates/hermes-skill/src/: executor.rs  lib.rs  manifest.rs  store.rs
crates/hermes-terminal/: Cargo.toml
crates/hermes-terminal/src/: backend.rs  docker.rs  factory.rs  lib.rs  local.rs
crates/hermes-tools/: Cargo.toml
crates/hermes-tools/src/: approval.rs  builtin.rs  builtin_ext.rs  coerce.rs  destructive.rs  lib.rs  overflow.rs  parallel.rs  registry.rs
crates/hermes-ui/: Cargo.toml
crates/hermes-ui/src/: app.rs  lib.rs  render.rs
skills/: echo_test.yaml  market_brief.yaml
