[workspace]
resolver = "2"
members = [
    "crates/hermes-cfg",
    "crates/hermes-core",
    "crates/hermes-security",
    "crates/hermes-llm",
    "crates/hermes-terminal",
    "crates/hermes-tools",
    "crates/hermes-skill",
    "crates/hermes-mcp",
    "crates/hermes-agent",
    "crates/hermes-gateway",
    "crates/hermes-cron",
    "crates/hermes-cli",
    "crates/hermes-ui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/dashanlkk/TLTSS"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Schema generation
schemars = "0.8"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Home directory
dirs = "5"

# Regex
regex = "1"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Line editing
reedline = "0.38"

# Web framework
axum = { version = "0.8", features = ["json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
