[package]
name = "hermes-gateway"
version.workspace = true
edition.workspace = true

[dependencies]
hermes-cfg = { path = "../hermes-cfg" }
hermes-agent = { path = "../hermes-agent" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
async-stream = "0.3"
