[package]
name = "hermes-skill"
version.workspace = true
edition.workspace = true

[dependencies]
hermes-cfg = { path = "../hermes-cfg" }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
walkdir = "2"
hermes-tools = { path = "../hermes-tools" }

[dev-dependencies]
tempfile = { workspace = true }
